# manifold

./: .gitattributes  .gitignore  Cargo.toml  README.md
res/shaders/: basic.wgsl  editor_grid.wgsl  hyper.wgsl
src/: main.rs
src/app/: app.rs  event_handler.rs  mod.rs  rendering.rs  window_management.rs  winit_handler.rs
src/renderer/: camera.rs  context.rs  material.rs  mod.rs  model.rs  object.rs  pipeline.rs  renderer.rs  shader.rs  texture.rs  vertex.rs
src/renderer/util/: mod.rs  resources.rs
src/shaders/: triangle.wgsl
src/util/: mod.rs
