[package]
name = "manifold"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30.5" }
wgpu = { version = "22.1.0" }
image = { version = "0.25.5" }
cgmath = { version = "0.18.0" }
tobj = { version = "4.0.2", default-features = false, features = ["async"]}
pollster = { version = "0.3.0" }
bytemuck = { version = "1.19.0", features = ["derive"] }
anyhow = { version = "1.0.93" }
env_logger = { version = "0.11.5" }
log = { version = "0.4.22" }
